--- a/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
+++ b/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AluraFlix.Domain\AluraFlix.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
