Link to database in project and configured the EF Core

--- a/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
+++ b/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AluraFlix.Domain\AluraFlix.Domain.csproj" />
+    <ProjectReference Include="..\AluraFlix.EFPersistence\AluraFlix.EFPersistence.csproj" />
   </ItemGroup>
 
 </Project>
