--- a/AluraFlix/AluraFlix.WebApi/AluraFlix.WebApi.csproj
+++ b/AluraFlix/AluraFlix.WebApi/AluraFlix.WebApi.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AluraFlix.EFPersistence\AluraFlix.EFPersistence.csproj" />
   </ItemGroup>
 
 </Project>
