created the contract interface for repositories

--- a/AluraFlix/AluraFlix.EFPersistence/AluraFlix.EFPersistence.csproj
+++ b/AluraFlix/AluraFlix.EFPersistence/AluraFlix.EFPersistence.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\AluraFlix.Domain\AluraFlix.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
