created the service layer and included the contract between the services classes

--- a/AluraFlix/AluraFlix.WebApi/AluraFlix.WebApi.csproj
+++ b/AluraFlix/AluraFlix.WebApi/AluraFlix.WebApi.csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AluraFlix.Domain\AluraFlix.Domain.csproj" />
     <ProjectReference Include="..\AluraFlix.EFPersistence\AluraFlix.EFPersistence.csproj" />
+    <ProjectReference Include="..\AluraFlix.Services\AluraFlix.Services.csproj" />
   </ItemGroup>
 
 </Project>
