--- a/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
+++ b/AluraFlix/AluraFlix.Tests/AluraFlix.Tests.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AluraFlix.Domain\AluraFlix.Domain.csproj" />
     <ProjectReference Include="..\AluraFlix.EFPersistence\AluraFlix.EFPersistence.csproj" />
+    <ProjectReference Include="..\AluraFlix.Services\AluraFlix.Services.csproj" />
   </ItemGroup>
 
 </Project>
