--- a/AluraFlix/AluraFlix.WebApi/appsettings.json
+++ b/AluraFlix/AluraFlix.WebApi/appsettings.json
@@ -7,7 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AluraFlix;Persist Security Info=True;"
+  //}
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AluraFlix;Persist Security Info=True;"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=AluraFlix;User Id=sa;password=123;Persist Security Info=True;"
   }
 }
